# agibot_x1_infer

./: AimRT_tutorial.md  CMakeLists.txt  README.md  README.zh_CN.md  build.sh  format.sh  pack  pack_env.sh  test.sh  url_gitee.bashrc
cmake/: GetAimRT.cmake
doc/: tutorials.md  tutorials.zh_CN.md
doc/dcu_driver_module/: dcu_driver_module.md  dcu_driver_module.zh_CN.md
doc/joy_stick_module/: joy_stick_module.md  joy_stick_module.zh_CN.md
doc/rl_control_module/: rl_control_module.md  rl_control_module.zh_CN.md
src/: CMakeLists.txt
src/assistant/native_ros2_channel_publisher/: CMakeLists.txt  main.cc
src/assistant/native_ros2_rpc_client/: main.cc
src/assistant/ros2_utils/: CMakeLists.txt  package.xml
src/assistant/ros2_utils/launch/: record.launch.py
src/module/control_module/: CMakeLists.txt
src/module/control_module/cfg/: rl_x1.yaml  rl_x1_sim.yaml  rl_x1_sim_hand.yaml
src/module/control_module/include/control_module/: control_module.h  controller_base.h  global.h  pd_controller.h  rl_controller.h  rotation_tools.h  state_machine.h  types.h  utilities.h
src/module/control_module/policy/: rl_walk_leg.onnx  rl_walk_leg_shoulder.onnx
src/module/control_module/src/: control_module.cc  controller_base.cc  global.cc  pd_controller.cc  rl_controller.cc  utilities.cc
src/module/dcu_driver_module/: CMakeLists.txt
src/module/dcu_driver_module/cfg/: dcu_x1.yaml
src/module/dcu_driver_module/include/dcu_driver_module/: ankle_transmission.h  config_parse.h  dcu_driver_module.h  lumbar_transmission.h  transmission.h  wrist_transmission.h
src/module/dcu_driver_module/src/: ankle_transmission.cc  dcu_driver_module.cc  lumbar_transmission.cc  wrist_transmission.cc
src/module/dcu_driver_module/xyber_controller/: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  format.sh
src/module/dcu_driver_module/xyber_controller/cmake/: post_install_script.cmake
src/module/dcu_driver_module/xyber_controller/example/: CMakeLists.txt  main.cpp
src/module/dcu_driver_module/xyber_controller/xyber_api/: CMakeLists.txt
src/module/dcu_driver_module/xyber_controller/xyber_api/include/: common_type.h  xyber_controller.h
src/module/dcu_driver_module/xyber_controller/xyber_api/include/internal/: actuator_base.h  common_utils.h  dcu.h  ethercat_manager.h  ethercat_node.h  omni_picker.h  power_flow.h  version.h
src/module/dcu_driver_module/xyber_controller/xyber_api/src/: comm_utils.cpp  dcu.cpp  ethercat_manager.cpp  power_flow.cpp  xyber_controller.cpp
src/module/joy_stick_module/: CMakeLists.txt
src/module/joy_stick_module/cfg/: joy_x1.yaml
src/module/joy_stick_module/include/joy_stick_module/: joy.h  joy_stick_module.h  joy_vel_limiter.h
src/module/joy_stick_module/src/: joy.cc  joy_stick_module.cc  joy_vel_limiter.cc
src/module/sim_module/: CMakeLists.txt
src/module/sim_module/cfg/: sim_x1.yaml
src/module/sim_module/include/sim_module/: array_safety.h  glfw_adapter.h  glfw_dispatch.h  platform_ui_adapter.h  sim_module.h  simulate.h
src/module/sim_module/model/meshes/: arm_r_wrist_a_ball_simple.STL  arm_r_wrist_a_loop.STL  arm_r_wrist_b_loop.STL  arm_r_wrist_motor_a_link.STL  arm_r_wrist_motor_b_link.STL  base_link_simple.STL  left_ankle_pitch.STL  left_ankle_roll.STL  left_elbow_pitch.STL  left_elbow_yaw.STL  left_hip_pitch.STL  left_hip_roll.STL  left_hip_yaw.STL  left_knee_pitch.STL  left_shoulder_pitch.STL  left_shoulder_roll.STL  left_shoulder_yaw.STL  left_wrist_roll.STL  leg_l_toe_a_ball.STL  leg_l_toe_a_link.STL  leg_l_toe_a_loop.STL  leg_l_toe_b_ball.STL  leg_l_toe_b_link.STL  leg_l_toe_b_loop.STL  leg_r_toe_a_ball.STL  leg_r_toe_a_link.STL  leg_r_toe_a_loop.STL  leg_r_toe_b_ball.STL  leg_r_toe_b_link.STL  leg_r_toe_b_loop.STL  lumbar_pitch.STL  lumbar_roll.STL  lumbar_yaw.STL  right_ankle_pitch.STL  right_ankle_roll.STL  right_elbow_pitch.STL  right_elbow_yaw.STL  right_hand_down_1_link.STL  right_hand_down_2_link.STL  right_hand_down_3_link.STL  (+21 more)
src/module/sim_module/model/mjcf/: xyber_x1_flat.xml
src/module/sim_module/model/mjcf/robot/xyber_x1/: xyber_x1_serial.xml
src/module/sim_module/src/: glfw_adapter.cc  glfw_dispatch.cc  platform_ui_adapter.cc  sim_module.cc  simulate.cc
src/pkg/pkg1/: CMakeLists.txt  pkg_main.cc
src/protocols/example_proto/: example_proto.proto
src/protocols/my_proto/: my_proto.proto
src/protocols/my_ros2_proto/: CMakeLists.txt  package.xml
src/protocols/my_ros2_proto/msg/: JoyStickData.msg  JoyStickState.msg
